patch text alignment fix

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -396,7 +396,7 @@ a:hover {
 	position: absolute;
     font-family: 'Fjalla One';
     font-size: 0.600em;
-    right: -0.550em;
+    right: -0.525em;
     top: 0.115em;
 	transform: rotate(35deg);
 }
